--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -395,3 +395,27 @@ dt:hover > a.headerlink {
     visibility: visible;
     text-decoration:none;
 }
+/*custom*/
+.row-fluid .offset2:first-child{
+margin-left: 1.094017094017094%;
+}
+
+.row-fluid .span8{
+width: 83%;
+}
+
+.output_png {
+        display: table-cell;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+div.input_area{
+background: #fffbd1 !important;
+}
+
+
+
+.prompt {
+    min-width: 2ex; !important
+}
